--- a/database/queries.html
+++ b/database/queries.html
@@ -129,11 +129,11 @@ $this->db->query($sql，array(3，'live'，'Rick'));
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="connecting.html">Connecting to your Database</a>
+上個主題:&nbsp;&nbsp;<a href="connecting.html">連接資料庫</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="results.html">Query Results</a>
+下個主題:&nbsp;&nbsp;<a href="results.html">產生查詢結果</a>
 </p>
 <p><a href="http://www.codeigniter.com.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
