--- a/database/results.html
+++ b/database/results.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Generating Query Results : CodeIgniter 使用手冊</title>
+<title>產生查詢結果 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,8 +42,8 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-<a href="index.html">Database Library</a> &nbsp;&#8250;&nbsp;
-Query Results
+<a href="index.html">Database 類別</a> &nbsp;&#8250;&nbsp;
+查詢結果
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -59,16 +59,16 @@ Query Results
 
 
 
-<h1>Generating Query Results</h1>
+<h1>產生查詢結果</h1>
 
 
-<p>There are several ways to generate query results:</p>
+<p>底下有幾種方法可以產生查詢結果:</p>
 
 	<h2>result()</h2>
 	
-	<p>This function returns the query result as an array of <strong>objects</strong>，or <strong>an empty array</strong> on failure.
+	<p>這函數會回傳一個陣列物件(<strong>objects</strong>)，或者失敗時會是<strong>空陣列</strong>。
 	
-	Typically you'll use this in a foreach loop，like this:</p>
+	一般狀況可以使用 foreach 迴圈，就像底下:</p>
 	
 	<code>
 	$query = $this->db->query("YOUR QUERY");<br />
@@ -80,9 +80,9 @@ Query Results
 	&nbsp;&nbsp;&nbsp;echo $row->body;<br />
 	}</code>
 	
-	<p>The above <dfn>function</dfn> is an alias of <dfn>result_object()</dfn>.</p>
+	<p>上述 <dfn>函數</dfn> 的別名是 <dfn>result_object()</dfn>。</p>
 
-	<p>If you run queries that might <strong>not</strong> produce a result，you are encouraged to test the result first:</p>
+	<p>假如您的查詢可能不會產生結果，我們建議您先用下面方式進行判斷:</p>
 	
 	<code>
 	$query = $this->db->query("YOUR QUERY");<br />
@@ -100,7 +100,7 @@ Query Results
 	
 	<h2>result_array()</h2>
 	
-	<p>This function returns the query result as a pure array，or an empty array when no result is produced.  Typically you'll use this in a foreach loop，like this:</p>
+	<p>此函數會回傳查詢的陣列資料，或者當查無資料會回傳空陣列。一般狀況可以使用 foreach 迴圈，就像底下:</p>
 	<code>
 	$query = $this->db->query("YOUR QUERY");<br />
 	<br />
@@ -114,8 +114,8 @@ Query Results
 
 	<h2>row()</h2>
 	
-	<p>This function returns a single result row.  If your query has more than one row，it returns only the first row.
-	The result is returned as an <strong>object</strong>.  Here's a usage 參考範例:</p>
+	<p>此函數會回傳單筆陣列資料。假如您查詢的資料超過一筆，它只會回傳第一筆資料。
+	結果會回傳單一 <strong>物件(object)</strong>。參考範例:</p>
 	<code>
 	$query = $this->db->query("YOUR QUERY");<br />
 	<br />
@@ -129,14 +129,14 @@ Query Results
 	}
 	</code>
 	
-	<p>If you want a specific row returned you can submit the row number as a digit in the first parameter:</p>
+	<p>如果您想要回傳特定的第幾筆資料，可以設定第一個參數為您想要的該筆資料：</p>
 	
 	<code>$row = $query->row(<dfn>5</dfn>);</code>
 
 
 	<h2>row_array()</h2>
 
-	<p>Identical to the above <var>row()</var> function，except it returns an array.  參考範例:</p>
+	<p>同等於上述 <var>row()</var> 函數，不同的是它回傳是陣列.  參考範例:</p>
 
 	<code>
 	$query = $this->db->query("YOUR QUERY");<br />
@@ -152,12 +152,12 @@ Query Results
 	</code>
 
 	
-	<p>If you want a specific row returned you can submit the row number as a digit in the first parameter:</p>
+	<p>如果您想要回傳特定的第幾筆資料，可以設定第一個參數為您想要的該筆資料：</p>
 	
 	<code>$row = $query->row_array(<dfn>5</dfn>);</code>
 	
 
- 	<p>In addition，you can walk forward/backwards/first/last through your results using these variations:</p>
+ 	<p>除此之外，您可以進而利用底下方式查詢到第一筆/最後一筆/下一筆/或者是前一筆資料:</p>
 
 <p>
 	<strong>$row = $query->first_row()</strong><br />
@@ -166,7 +166,7 @@ Query Results
 	<strong>$row = $query->previous_row()</strong>
 </p>
 
-<p>By default they return an object unless you put the word "array" in the parameter:</p>
+<p>預設回傳值為物件，除非設定第一個參數為陣列資料：</p>
 
 <p>
 	<strong>$row = $query->first_row('array')</strong><br />
@@ -177,18 +177,18 @@ Query Results
 
 
 
-<h1>Result 補助函數</h1>
+<h1>回傳結果補助函數</h1>
 
 
 <h2>$query->num_rows()</h2>
-<p>The number of rows returned by the query. 注意: In this example，<dfn>$query</dfn> is the variable that the query result object is assigned to:</p>
+<p>回傳查詢資料行數. 注意: 在這例子裡面，<dfn>$query</dfn> 是您查詢語法之後所回傳物件的變數:</p>
 
 <code>$query = $this->db->query('SELECT * FROM my_table');<br /><br />
 echo $query->num_rows();
 </code>
 
 <h2>$query->num_fields()</h2>
-<p>The number of FIELDS (columns) returned by the query.  Make sure to call the function using your query result object:</p>
+<p>回傳查詢結果所產生的欄位行數。務必確定使用查詢所回傳物件的變數:</p>
 
 <code>$query = $this->db->query('SELECT * FROM my_table');<br /><br />
 echo $query->num_fields();
@@ -197,9 +197,8 @@ echo $query->num_fields();
 
 
 <h2>$query->free_result()</h2>
-<p>It frees the memory associated with the result and deletes the result resource ID.  Normally PHP frees its memory automatically at the end of script
-execution.  However，if you are running a lot of queries in a particular script you might want to free the result after each query result has been
-generated in order to cut down on memory consumptions.  參考範例:
+<p>釋放查詢結果所產生的記憶體，以及刪除物件變數ID。基本上PHP會在程式全部執行完成後自動釋放記憶體。
+然而，假如您在單一PHP檔案執行了多個查詢，就必須要釋放每一次查詢所消耗的記憶體空間。參考範例:
 </p>
 
 <code>$query = $this->db->query('SELECT title FROM my_table');<br /><br />
@@ -207,12 +206,12 @@ foreach ($query->result() as $row)<br />
 {<br />
 &nbsp;&nbsp;&nbsp;echo $row->title;<br />
 }<br />
-$query->free_result();  // The $query result object will no longer be available<br />
+$query->free_result();  // $query 物件將不再使用了<br />
 <br />
 $query2 = $this->db->query('SELECT name FROM some_table');<br /><br />
 $row = $query2->row();<br />
 echo $row->name;<br />
-$query2->free_result();  // The $query2 result object will no longer be available
+$query2->free_result();  // $query2 物件將不再使用了
 </code>
 
 
@@ -225,11 +224,11 @@ $query2->free_result();  // The $query2 result object will no longer be availabl
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="queries.html">Queries</a>
+上個主題:&nbsp;&nbsp;<a href="queries.html">查詢</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="helpers.html">Query 補助函數</a>
+下個主題:&nbsp;&nbsp;<a href="helpers.html">查詢補助函數</a>
 </p>
 <p><a href="http://www.codeigniter.com.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
