--- a/helpers/xml_helper.html
+++ b/helpers/xml_helper.html
@@ -70,7 +70,7 @@ XML 補助函數
 
 <h2>xml_convert('<var>string</var>')</h2>
 
-<p>取得字串當作是輸入(input)，並轉換成(convert)底下所保留的 XML 字元變成 entities:</p>
+<p>取得字串當作是輸入(input)，並轉換成(convert)底下所保留的 XML 字元至實體(entitles):</p>
 
 <p>
 Ampersands: &amp;<br />
