--- a/helpers/text_helper.html
+++ b/helpers/text_helper.html
@@ -58,69 +58,60 @@ Text 補助函數
 
 <h1>Text 補助函數</h1>
 
-<p>The Text 補助函數 file contains functions that assist in working with text.</p>
+<p>Text 補助函數裡的檔案所包含的函數，可以用來協助處理 text。</p>
 
 
 <h2>載入 補助函數</h2>
 
-<p>This helper is loaded using the following code:</p>
+<p>此補助函數的載入方式依照下列程式碼:</p>
 <code>$this->load->helper('text');</code>
 
-<p>The following functions are available:</p>
+<p>下列函數即可使用:</p>
 
 
 <h2>word_limiter()</h2>
 
-<p>Truncates a string to the number of <strong>words</strong> specified.  參考範例:</p>
+<p>擷取字串中的某個數量的<strong>單字(words)</strong>。參考範例:</p>
 
 <code>
 $string = "Here is a nice text string consisting of eleven words.";<br />
 <br />
 $string = word_limiter($string，4);<br /><br />
 
-// Returns:  Here is a nice&#8230;
+// 回傳的是:  Here is a nice&#8230;
 </code>
 
-<p>The third parameter is an optional suffix added to the string.  By default it adds an ellipsis.</p>
-
+<p>第三個選擇性的參數是加入後置符號到字串。預設加入省略符號。</p>
 
 <h2>character_limiter()</h2>
 
-<p>Truncates a string to the number of <strong>characters</strong> specified.  It maintains the integrity
-of words so the character count may be slightly more or less then what you specify. 參考範例:</p>
+<p> 擷取字串中的某個數量的<strong>字元(characters)</strong>。它會維持單字的完整性，所以字元的數量會稍微比你預期的來的多或少一些。參考範例:</p>
 
 <code>
 $string = "Here is a nice text string consisting of eleven words.";<br />
 <br />
 $string = character_limiter($string，20);<br /><br />
 
-// Returns:  Here is a nice text string&#8230;
+// 回傳的是:  Here is a nice text string&#8230;
 </code>
 
-<p>The third parameter is an optional suffix added to the string，if undeclared this helper uses an ellipsis.</p>
-
+<p>第三個選擇性的參數是加入後置符號到字串。預設加入省略符號。</p>
 
 
 <h2>ascii_to_entities()</h2>
 
-<p>Converts ASCII values to character entities，including high ASCII and MS Word characters that can cause problems when used in a web page,
-so that they can be shown consistently regardless of browser settings or stored reliably in a database.
-There is some dependence on your server's supported character sets，so it may not be 100% reliable in all cases，but for the most
-part it should correctly identify characters outside the normal range (like accented characters). 參考範例:</p>
+<p>將 ASCII 值轉換成字元實體，包含那些使用在網站頁面裡頭，可能會造成問題的 high ASCII 以及 MS Word charcters。這樣則可以一致的顯示出來，而不需顧慮瀏覽器設定或是可靠的儲存在資料庫。但還有些需依賴伺服器所支援的字元，所以並非在所有的 case 都完全 ok，但是它還是可以正確的辨識出正常範圍外的字元(像是早期的字元)。參考範例:</p>
 
 <code>$string = ascii_to_entities($string);</code>
 
 
 <h2>entities_to_ascii()</h2>
 
-<p>This function does the opposite of the previous one; it turns character entities back into ASCII.</p>
-
+<p>此函數提供的是前個函數的逆向功能。它將字元實體還原至 ACSII 數值。</p>
 
 <h2>word_censor()</h2>
 
-<p>Enables you to censor words within a text string.  The first parameter will contain the original string.  The
-second will contain an array of words which you disallow.  The third (optional) parameter can contain a replacement value
-for the words.  If not specified they are replaced with pound signs: ####.  參考範例:</p>
+<p>允許你去檢查字串中的單字。第一個參數將會包含原始的字串。第二個字串則包含你所不允許的單字陣列。第三個字串的是選擇性的參數，包含用來取代單字的值。如果未提供取代的值的話，那麼就會用 #### 來取代。參考範例:</p>
 
 <code>
 $disallowed = array('darn'，'shucks'，'golly'，'phooey');<br />
@@ -130,18 +121,15 @@ $string = word_censor($string，$disallowed，'Beep!');</code>
 
 <h2>highlight_code()</h2>
 
-<p>Colorizes a string of code (PHP，HTML，etc.).  參考範例:</p>
+<p>替程式碼上色(PHP，HTML，etc.)。 參考範例:</p>
 
 <code>$string = highlight_code($string);</code>
 
-<p>The function uses PHP's highlight_string() function，so the colors used are the ones specified in your php.ini file.</p>
-
+<p>此功能使用 PHP 的 highlight_string() 函數，所以該顏色是依照 php.ini 檔案裡頭所指定。</p>
 
 <h2>highlight_phrase()</h2>
 
-<p>Will highlight a phrase within a text string.  The first parameter will contain the original string，the second will
-contain the phrase you wish to highlight.  The third and fourth parameters will contain the opening/closing HTML tags
-you would like the phrase wrapped in.  參考範例:</p>
+<p>替字串中的某個片語上色。第一個參數包含原始的字串，第二字串則包含你所要上色的片語，第三已及第四的參數，則包含你要將它們包在一起的開始與結束的 HTML 標籤。參考範例:</p>
 
 <code>
 $string = "Here is a nice text string about nothing in particular.";<br />
@@ -149,7 +137,7 @@ $string = "Here is a nice text string about nothing in particular.";<br />
 $string = highlight_phrase($string，"nice text"，'&lt;span style="color:#990000">'，'&lt;/span>');
 </code>
 
-<p>The above text returns:</p>
+<p>傳回下述的文字:</p>
 
 <p>Here is a <span style="color:#990000">nice text</span> string about nothing in particular.</p>
 
@@ -157,7 +145,7 @@ $string = highlight_phrase($string，"nice text"，'&lt;span style="color:#99000
 
 <h2>word_wrap()</h2>
 
-<p>Wraps text at the specified <strong>character</strong> count while maintaining complete words.  參考範例:</p>
+<p>在指定的<strong>字元(character)</strong>數斷行，並且保留單字的完整性。 參考範例:</p>
 
 <code>$string = "Here is a simple string of text that will help us demonstrate this function.";<br />
 <br />
