translated: helpers/security_helper.html

--- a/helpers/security_helper.html
+++ b/helpers/security_helper.html
@@ -58,26 +58,24 @@ Security 補助函數
 
 <h1>Security 補助函數</h1>
 
-<p>The Security 補助函數 file contains security related functions.</p>
+<p>Security 補助函數的檔案包含安全相關的函數。</p>
 
+<h2>載入補助函數</h2>
 
-<h2>載入 補助函數</h2>
-
-<p>This helper is loaded using the following code:</p>
+<p>載入補助函數使用下列的程式碼:</p>
 <code>$this->load->helper('security');</code>
 
-<p>The following functions are available:</p>
+<p>底下的函數就可以開始使用:</p>
 
 
 <h2>xss_clean()</h2>
 
-<p>Provides Cross Site Script Hack filtering.  This function is an alias to the one in the
-<a href="../libraries/input.html">Input class</a>.  More info can be found there.</p>
+<p>提供跨網站攻擊程式的過濾，此函數是<a href="../libraries/input.html">Input 類別</a>的其中的一個別名。</p>
 
 
 <h2>dohash()</h2>
 
-<p>Permits you to create SHA1 or MD5 one way hashes suitable for encrypting passwords.  Will create SHA1 by default. Examples:</p>
+<p>允取建立單向 SHA1 或是 MD5 表來供作加密密碼。預設建立 SHA1。範例:</p>
 
 <code>
 $str = dohash($str); // SHA1<br />
@@ -90,14 +88,16 @@ $str = dohash($str，'md5'); // MD5
 
 <h2>strip_image_tags()</h2>
 
-<p>This is a security function that will strip image tags from a string.  It leaves the image URL as plain text.</p>
+<p>
+這是安全性的功能，將會去掉字串中的影像標籤。它會把影像的 URL 視為普通文字。</p>
 
 <code>$string = strip_image_tags($string);</code>
 
 
 <h2>encode_php_tags()</h2>
 
-<p>This is a security function that converts PHP tags to entities. 注意: If you use the XSS filtering function it does this automatically.</p>
+<p>
+這是安全性函數，用來將 PHP 標籤轉換成實體。注意: 若使用 XSS 過濾功能的話，這個函數則會自動啟動。</p>
 
 <code>$string = encode_php_tags($string);</code>
 
